# hexlet-flask-example

./: Makefile  pyproject.toml  self-working.py
templates/: edit.html  index.html  login.html  show.html
templates/new/: new.html
