[tool.poetry]
name = "flask-hexlet"
version = "0.1.0"
description = ""
authors = ["Garkusha Valery <aston585v@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_hexlet"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
faker = "^19.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[scripts]
preactivate = "source $(poetry env info --path)/bin/activate"
postdeactivate = "deactivate"
